Corrected the serachContainer collapsing after displaying it to flex.

--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,7 @@ h1 {
 
 #searchContainer {
     width: 100%;
-    display: flex;
+    /* display: flex; */
     flex-direction: row;
     justify-content: space-between;
     margin: 0px;
